--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "express-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "license": "MIT",
   "dependencies": {
     "ethers": "^5.7.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "heroku": "^7.65.0"
   }
 }
